--- a/Shopping/Shopping/Views/Countries/DetailsState.cshtml
+++ b/Shopping/Shopping/Views/Countries/DetailsState.cshtml
@@ -14,7 +14,7 @@
 <div>
     <a asp-action="AddCity" asp-route-id="@Model?.Id" class="btn btn-outline-primary">Agregrar Ciudad</a> 
     <a asp-action="EditState" asp-route-id="@Model?.Id" class="btn btn-outline-warning">Editar Estado</a> 
-    <a asp-action="Details" asp-route-id="@Model?.Id" class="btn btn-outline-success">Regresar</a>
+    <a asp-action="Details" asp-route-id="@Model?.Country.Id" class="btn btn-outline-success">Regresar</a>
 </div>
 <hr/>
 <div class="row">
